# puzzle-decoder

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: benchmark.py  folder_structure.txt  load_test.py  project_structure.py  puzzle_fragmen_endpoint_test.py
src/puzzle_solver/api/: auth.py  main.py  middleware.py  models.py  versioning.py
src/puzzle_solver/api/routers/: auth.py  health.py  observability.py
src/puzzle_solver/api/v1/routers/: puzzle.py
src/puzzle_solver/cli/: main.py
src/puzzle_solver/clients/: http_client.py
src/puzzle_solver/config/: settings.py
src/puzzle_solver/core/: logging_config.py  observability.py
src/puzzle_solver/domain/models/: fragment.py  puzzle.py
src/puzzle_solver/domain/services/: base.py  fragment.py  puzzle.py
src/puzzle_solver/utils/: fragment_utils.py
tests/performance/: test_benchmark.py  test_load.py
tests/unit/: test_fragment_service.py  test_fragment_utils.py  test_puzzle_service.py
