[project]
name = "puzzle-decoder"
version = "0.1.0"
description = "Puzzle decoder project"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "fastapi[standard]>=0.104.0",
    "orjson>=3.11.4",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.11.0",
    "requests>=2.31.0",
    "structlog>=25.5.0",
    "tenacity>=9.1.2",
    "uvicorn>=0.24.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-aiohttp-client>=0.41b0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "prometheus-client>=0.19.0",
    "python-jose[cryptography]>=3.3.0",
    # Optional uvloop: only install on Unix-like OS with CPython
    "uvloop>=0.19.0; platform_system != 'Windows' and implementation_name == 'cpython'",
]

[project.scripts]
puzzle-solver = "puzzle_solver.cli.main:cli_main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/puzzle_solver"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
